# cs1200-hw

./: .gitignore  README.md
hw0/: .clang-format  CMakeLists.txt  container.cpp  main.cpp  test.cpp
hw1/: CMakeLists.txt  justify.cpp  justify.hpp  main.cpp  test.cpp
hw2/: CMakeLists.txt  hockey_stats.cpp  hockey_stats.hpp  main.cpp  test.cpp
hw2/testcases/: 2012_ecac_output.txt  2012_small_output.txt  no_penalties_or_overtime_output.txt
hw3/: CMakeLists.txt  main.cpp  test.cpp  undoarray.h
hw4/: .clang-format  .gitignore  CMakeLists.txt  algorithm.cpp  main.cpp  test.cpp
hw4/testcases/: requests_smallest.txt
hw5/: CMakeLists.txt  list.h  main.cpp  test.cpp  test_cpp_semantics.cpp  traincar.cpp  traincar.h
hw7/: CMakeLists.txt  main.cpp  map.h  test.cpp
